search input update

--- a/index.html
+++ b/index.html
@@ -10,12 +10,19 @@
     <header>
       <img src="img/stock-logo.jpg" alt="ebook logo" />
       <div class="search_field">
-        <label for="search_field">Search</label>
-        <input type="text" id="search_field" aria-label="search field" />
+        <label for="search_field">
+          <img src="icons/search.svg" alt="search icon" />
+        </label>
+        <input
+          type="text"
+          id="search_field"
+          aria-label="search field"
+          placeholder="Search..."
+        />
       </div>
       <div>
-        <button id="login_btn">Log in</button>
-        <button id="signup_btn">Sign up</button>
+        <a id="login_btn">Log in</a>
+        <a id="signup_btn">Sign up</a>
       </div>
     </header>
     <main></main>
