--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <img src="img/stock-logo.jpg" alt="ebook logo" />
+      <a href="index.html"><img src="img/stock-logo.jpg" alt="ebook logo" /></a>
       <div class="search_field">
         <label for="search_field">
           <img src="icons/search.svg" alt="search icon" />
@@ -21,11 +21,26 @@
         />
       </div>
       <div>
-        <a id="login_btn">Log in</a>
-        <a id="signup_btn">Sign up</a>
+        <a href="login.html" id="login_btn">Log in</a>
+        <a href="signup.html" id="signup_btn">Sign up</a>
       </div>
     </header>
     <main></main>
-    <footer></footer>
+    <footer>
+      <a href="index.html"><img src="img/stock-logo.jpg" alt="ebook logo" /></a>
+
+      <p>&#169; eBooks</p>
+      <div class="some_icons">
+        <a href="https://www.facebook.com" target="_blank">
+          <img src="img/facebook.png" alt="facebook logo" />
+        </a>
+        <a href="https://www.instagram.com" target="_blank">
+          <img src="img/instagram.png" alt="instagram logo" />
+        </a>
+        <a href="https://www.youtube.com" target="_blank">
+          <img src="img/youtube.png" alt="youtube logo" />
+        </a>
+      </div>
+    </footer>
   </body>
 </html>
