--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <a href="index.html"><img src="img/stock-logo.jpg" alt="ebook logo" /></a>
+      <a href="index.html"><img src="img/logo.png" alt="ebook logo" /></a>
       <div class="search_field">
         <label for="search_field">
           <img src="icons/search.svg" alt="search icon" />
