--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Home</title>
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
@@ -27,7 +27,7 @@
     </header>
     <main></main>
     <footer>
-      <a href="index.html"><img src="img/stock-logo.jpg" alt="ebook logo" /></a>
+      <a href="index.html"><img src="img/logo.png" alt="ebook logo" /></a>
 
       <p>&#169; eBooks</p>
       <div class="some_icons">
