--- a/index.html
+++ b/index.html
@@ -25,7 +25,18 @@
         <a href="signup.html" id="signup_btn">Sign up</a>
       </div>
     </header>
-    <main></main>
+    <main>
+      <section class="hero">
+        <div class="hero-content">
+            <h1>Welcome to Our Site</h1>
+            <p>Discover amazing content and enjoy a great experience.</p>
+            <div class="hero-buttons">
+                <button class="btn primary">Get Started</button>
+                <button class="btn secondary">Learn More</button>
+            </div>
+        </div>
+    </section>
+    </main>
     <footer>
       <a href="index.html"><img src="img/logo.png" alt="ebook logo" /></a>
 
