--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
     <main>
       <section class="hero">
         <div class="hero-content">
-            <h1>Welcome to Our Site</h1>
-            <p>Discover amazing content and enjoy a great experience.</p>
+            <h1>Welcome to eBooks!</h1>
+            <p>Discover amazing content and more than 1500 books online</p>
             <div class="hero-buttons">
                 <button class="btn primary">Get Started</button>
-                <button class="btn secondary">Learn More</button>
+                <button class="btn secondary">Discover our books</button>
             </div>
         </div>
     </section>
