--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <h1>Welcome to eBooks!</h1>
             <p>Discover amazing content and more than 1500 books online</p>
             <div class="hero-buttons">
-                <button class="btn primary">Get Started</button>
+                <a href="signup.html"><button class="btn primary">Get Started</button></a>
                 <button class="btn secondary">Discover our books</button>
             </div>
         </div>
