--- a/login.html
+++ b/login.html
@@ -5,17 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login</title>
     <link rel="stylesheet" href="css/login-signup.css" />
+    <script type="module" src="js/modules/login_auth.mjs"></script>
   </head>
   <body>
     <main>
-      <form action="/login" method="POST">
+      <form id="loginForm" action="/users/login" method="POST" novalidate>
         <div>
           <label for="email">Email</label>
           <input type="email" id="email" name="email" required />
+          <span class="error" id="email-error"></span>
         </div>
         <div>
           <label for="password">Password</label>
           <input type="password" id="password" name="password" required />
+          <span class="error" id="password-error"></span>
         </div>
         <div>
           <button type="submit">Login</button>
