--- a/signup.html
+++ b/signup.html
@@ -5,18 +5,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sign-up</title>
     <link rel="stylesheet" href="css/login-signup.css" />
+    <script type="module" src="js/modules/signup_auth.mjs"></script>
   </head>
   <body>
     <main>
-      <form action="/signup" method="POST">
+      <form
+        id="signupForm"
+        action="http://localhost:8080/users"
+        method="post"
+        novalidate
+      >
+        <div class="names-container">
+          <div>
+            <label for="first_name">First Name:</label>
+            <input
+              type="text"
+              id="first_name"
+              name="first_name"
+              required
+              minlength="2"
+              maxlength="50"
+            />
+            <span class="error" id="first_name-error"></span>
+          </div>
+          <div>
+            <label for="last_name">Last Name:</label>
+            <input
+              type="text"
+              id="last_name"
+              name="last_name"
+              required
+              minlength="2"
+              maxlength="50"
+            />
+            <span class="error" id="last_name-error"></span>
+          </div>
+        </div>
+
         <div>
           <label for="email">Email:</label>
           <input type="email" id="email" name="email" required />
+          <span class="error" id="email-error"></span>
         </div>
+
         <div>
           <label for="password">Password:</label>
           <input type="password" id="password" name="password" required />
+          <span class="error" id="password-error"></span>
         </div>
+
         <div>
           <label for="repeat-password">Repeat Password:</label>
           <input
@@ -25,7 +62,40 @@
             name="repeat-password"
             required
           />
+          <span class="error" id="repeat-password-error"></span>
         </div>
+
+        <div>
+          <label for="address">Address:</label>
+          <input
+            type="text"
+            id="address"
+            name="address"
+            required
+            minlength="5"
+            maxlength="100"
+          />
+          <span class="error" id="address-error"></span>
+        </div>
+
+        <div>
+          <label for="phone_number">Phone Number:</label>
+          <input
+            type="tel"
+            id="phone_number"
+            name="phone_number"
+            required
+            pattern="[0-9]{10}"
+          />
+          <span class="error" id="phone_number-error"></span>
+        </div>
+
+        <div>
+          <label for="birth_date">Birthday:</label>
+          <input type="date" id="birth_date" name="birth_date" required />
+          <span class="error" id="birth_date-error"></span>
+        </div>
+
         <div>
           <button type="submit">Sign Up</button>
         </div>
