--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           placeholder="Search..."
         />
       </div>
-      <div>
+      <div class="header-buttons">
         <a href="login.html" id="login_btn">Log in</a>
         <a href="signup.html" id="signup_btn">Sign up</a>
       </div>
