--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <main>
-      <form id="loginForm" action="/users/login" method="POST" novalidate>
+      <form id="loginForm" method="POST" novalidate>
         <div>
           <label for="email">Email</label>
           <input type="email" id="email" name="email" required />
@@ -20,6 +20,7 @@
           <input type="password" id="password" name="password" required />
           <span class="error" id="password-error"></span>
         </div>
+        <span class="error" id="login-error"></span>
         <div>
           <button type="submit">Login</button>
         </div>
