--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
     <link rel="stylesheet" href="css/main.css" />
+    <script src="js/common.js" defer></script>
   </head>
   <body>
     <header>
@@ -23,19 +24,23 @@
       <div class="header-buttons">
         <a href="login.html" id="login_btn">Log in</a>
         <a href="signup.html" id="signup_btn">Sign up</a>
+        <a href="index.html" id="logout_btn" class="hidden">Log out</a>
+        <a href="profile.html" id="profile_btn" class="hidden"
+          ><img src="icons/profile.svg" alt="account icon"
+        /></a>
       </div>
     </header>
     <main>
       <section class="hero">
         <div class="hero-content">
-            <h1>Welcome to eBooks!</h1>
-            <p>Discover amazing content and more than 1500 books online</p>
-            <div class="hero-buttons">
-                <a href="signup.html"><button class="btn primary">Get Started</button></a>
-                <button class="btn secondary">Discover our books</button>
-            </div>
+          <h1>Welcome to eBooks!</h1>
+          <p>Discover amazing content and more than 1500 books online</p>
+          <div class="hero-buttons">
+            <a href="signup.html" class="btn primary">Get Started</a>
+            <a class="btn secondary">Discover our books</a>
+          </div>
         </div>
-    </section>
+      </section>
     </main>
     <footer>
       <a href="index.html"><img src="img/logo.png" alt="ebook logo" /></a>
