--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
     <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/hero.css" />
     <script src="js/common.js" defer></script>
   </head>
   <body>
@@ -37,7 +38,7 @@
           <p>Discover amazing content and more than 1500 books online</p>
           <div class="hero-buttons">
             <a href="signup.html" class="btn primary">Get Started</a>
-            <a class="btn secondary">Discover our books</a>
+            <a href="books.html" class="btn secondary">Discover our books</a>
           </div>
         </div>
       </section>
