--- a/books.html
+++ b/books.html
@@ -8,10 +8,13 @@
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  <!-- Carousel container -->
-  <div class="carousel-wrapper">
-    <div id="cards-container" class="carousel"></div>
-  </div>
+<!-- Popular Books Section -->
+<section class="popular-books">
+    <h1>Our Most Popular Books:</h1>
+    <div class="carousel-wrapper">
+      <div id="cards-container" class="carousel"></div>
+    </div>
+  </section>
 
   <!-- Template for a book card -->
   <template id="book-card-template">
@@ -27,6 +30,7 @@
       </div>
       <div class="card-footer">More info</div>
     </div>
+  </template>
   </template>
 
   <script type="module" src="js/modules/maincards.js"></script>
