--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="css/hero.css" />
     <script src="js/common.js" defer></script>
   </head>
-  <body>
+  <body id="home_page">
     <header>
       <a href="index.html"><img src="img/logo.png" alt="ebook logo" /></a>
-      <div class="search_field">
+      <form id="search_form">
         <label for="search_field">
           <img src="icons/search.svg" alt="search icon" />
         </label>
@@ -20,8 +20,9 @@
           id="search_field"
           aria-label="search field"
           placeholder="Search..."
+          required
         />
-      </div>
+      </form>
       <div class="header-buttons">
         <a href="login.html" id="login_btn">Log in</a>
         <a href="signup.html" id="signup_btn">Sign up</a>
