--- a/login.html
+++ b/login.html
@@ -5,9 +5,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login</title>
     <link rel="stylesheet" href="css/login-signup.css" />
+    <link rel="stylesheet" href="css/main.css" />
     <script type="module" src="js/modules/login_auth.mjs"></script>
+    <script src="js/common.js" defer></script>
   </head>
   <body>
+    <header>
+      <a href="index.html"><img src="img/logo.png" alt="ebook logo" /></a>
+      <form id="search_form">
+        <label for="search_field">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 -960 960 960"
+            height="24px"
+            width="24px"
+          >
+            <path
+              d="M784-120 532-372q-30 24-69 38t-83 14q-109 0-184.5-75.5T120-580q0-109 75.5-184.5T380-840q109 0 184.5 75.5T640-580q0 44-14 83t-38 69l252 252-56 56ZM380-400q75 0 127.5-52.5T560-580q0-75-52.5-127.5T380-760q-75 0-127.5 52.5T200-580q0 75 52.5 127.5T380-400Z"
+            />
+          </svg>
+        </label>
+        <input
+          type="text"
+          id="search_field"
+          aria-label="search field"
+          placeholder="Search..."
+          required
+        />
+      </form>
+      <div class="header-buttons">
+        <a href="login.html" id="login_btn">Log in</a>
+        <a href="signup.html" id="signup_btn">Sign up</a>
+        <a href="index.html" id="logout_btn" class="hidden">Log out</a>
+        <a href="profile.html" id="profile_btn" class="hidden"
+          ><img src="icons/profile.svg" alt="account icon"
+        /></a>
+      </div>
+    </header>
     <main>
       <form id="loginForm" method="POST" novalidate>
         <div>
@@ -26,5 +60,21 @@
         </div>
       </form>
     </main>
+    <footer>
+      <a href="index.html"><img src="img/logo.png" alt="ebook logo" /></a>
+
+      <p>&#169; eBooks</p>
+      <div class="some_icons">
+        <a href="https://www.facebook.com" target="_blank">
+          <img src="img/facebook.png" alt="facebook logo" />
+        </a>
+        <a href="https://www.instagram.com" target="_blank">
+          <img src="img/instagram.png" alt="instagram logo" />
+        </a>
+        <a href="https://www.youtube.com" target="_blank">
+          <img src="img/youtube.png" alt="youtube logo" />
+        </a>
+      </div>
+    </footer>
   </body>
 </html>
