--- a/results.html
+++ b/results.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Books</title>
-    <link rel="stylesheet" href="css/cards.css" />
-    <link rel="stylesheet" href="css/main.css" />
-    <script type="module" src="js/modules/maincards.js"></script>
+    <title>Document</title>
+    <script type="module" src="js/modules/results.mjs"></script>
     <script src="js/common.js" defer></script>
+    <link rel="stylesheet" href="css/results.css" />
+    <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
     <header>
@@ -43,13 +43,10 @@
       </div>
     </header>
     <main>
-      <section class="popular-books">
-        <h1>Our Most Popular Books:</h1>
-        <div class="carousel-wrapper">
-          <div id="cards-container" class="carousel"></div>
-        </div>
-      </section>
+      <h1></h1>
+      <section id="results"></section>
     </main>
+
     <footer>
       <a href="index.html"><img src="img/logo.png" alt="ebook logo" /></a>
 
@@ -70,9 +67,6 @@
   <template id="book-card-template">
     <div class="card">
       <div class="card-header"></div>
-      <div class="card-image">
-        <img src="./img/stock-photo.jpg" alt="Book Cover" />
-      </div>
       <div class="card-content">
         <h3></h3>
         <p class="author"></p>
