Remove img from cards

--- a/books.html
+++ b/books.html
@@ -69,13 +69,17 @@
   </body>
   <template id="book-card-template">
     <div class="card">
+        <a href="">
       <div class="card-header"></div>
       <div class="card-content">
         <h3></h3>
         <p class="author"></p>
         <p class="published-year"></p>
       </div>
-      <div class="card-footer">More info</div>
+      <div class="card-footer">
+        <p>More info</p>
+    </div>
+    </a>
     </div>
   </template>
 </html>
