--- a/results.html
+++ b/results.html
@@ -73,7 +73,9 @@
           <p class="author"></p>
           <p class="published-year"></p>
         </div>
-        <div class="card-footer">More info</div>
+        <div class="card-footer">
+          <p>More info</p>
+        </div>
       </a>
     </div>
   </template>
