--- a/books.html
+++ b/books.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Books</title>
-    <link rel="stylesheet" href="css/cards.css" />
     <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/cards.css" />
+    
     <script type="module" src="js/modules/maincards.js"></script>
     <script src="js/common.js" defer></script>
   </head>
@@ -42,7 +43,7 @@
         /></a>
       </div>
     </header>
-    <main>
+    <main id="discover">
       <section class="popular-books">
         <h1>Our Most Popular Books:</h1>
         <div class="carousel-wrapper">
