--- a/books.html
+++ b/books.html
@@ -50,6 +50,12 @@
           <div id="cards-container" class="carousel"></div>
         </div>
       </section>
+      <section class="popular-authors">
+        <h1>Popular Authors:</h1>
+        <div class="carousel-wrapper">
+          <div id="authors-container" class="carousel"></div>
+        </div>
+      </section>
     </main>
     <footer>
       <a href="index.html"><img src="img/logo.png" alt="ebook logo" /></a>
@@ -81,6 +87,15 @@
         <p>More info</p>
     </div>
     </a>
+    </div>
+  </template>
+  <template id="author-card-template">
+    <div class="card">
+      <a href="">
+        <div class="card-content">
+          <h3 class="author-name"></h3>
+        </div>
+      </a>
     </div>
   </template>
 </html>
