loan msg update

--- a/book.html
+++ b/book.html
@@ -123,8 +123,8 @@
         <line x1="9" y1="9" x2="15" y2="15"></line>
       </svg>
       <div class="dialog-content">
-        <p class="loan-status">You have already loaned this book.</p>
-        <p>Find it in your <a href="/profile.html">personal profile</a>.</p>
+        <p class="loan-status"></p>
+        <p class="email-link"></p>
       </div>
     </dialog>
   </body>
