--- a/login.html
+++ b/login.html
@@ -43,22 +43,35 @@
       </div>
     </header>
     <main>
-      <form id="loginForm" method="POST" novalidate>
-        <div>
-          <label for="email">Email</label>
-          <input type="email" id="email" name="email" required />
-          <span class="error" id="email-error"></span>
-        </div>
-        <div>
-          <label for="password">Password</label>
-          <input type="password" id="password" name="password" required />
-          <span class="error" id="password-error"></span>
-        </div>
-        <span class="error" id="login-error"></span>
-        <div>
-          <button type="submit">Login</button>
-        </div>
-      </form>
+      <section>
+        <h1>Login to eBooks</h1>
+        <form id="loginForm" novalidate>
+          <div>
+            <label for="email">Email</label>
+            <input
+              type="email"
+              id="email"
+              name="email"
+              required
+              placeholder="E.g. john@paisley.com"
+            />
+            <span class="error" id="email-error"></span>
+          </div>
+          <div>
+            <label for="password">Password</label>
+            <input type="password" id="password" name="password" required />
+            <span class="error" id="password-error"></span>
+          </div>
+          <p class="reminder">
+            Don't have an account?
+            <a href="./signup.html">Create one now!</a>
+          </p>
+          <span class="error" id="login-error"></span>
+          <div>
+            <button type="submit">Login</button>
+          </div>
+        </form>
+      </section>
     </main>
     <footer>
       <a href="index.html"><img src="img/logo.png" alt="ebook logo" /></a>
