--- a/signup.html
+++ b/signup.html
@@ -43,92 +43,106 @@
       </div>
     </header>
     <main>
-      <form id="signupForm" method="post" novalidate>
-        <div class="names-container">
+      <section>
+        <h1>Sign up for eBooks</h1>
+        <p class="description">
+          Sign up today and unlock instant access to thousands of exciting
+          eBooks, ready to explore anytime!
+        </p>
+        <form id="signupForm" method="post" novalidate>
+          <div class="names-container">
+            <div>
+              <label for="first_name">First Name</label>
+              <input
+                type="text"
+                id="first_name"
+                name="first_name"
+                required
+                placeholder="John"
+              />
+              <span class="error" id="first_name-error"></span>
+            </div>
+            <div>
+              <label for="last_name">Last Name</label>
+              <input
+                type="text"
+                id="last_name"
+                name="last_name"
+                required
+                placeholder="Paisley"
+              />
+              <span class="error" id="last_name-error"></span>
+            </div>
+          </div>
+
           <div>
-            <label for="first_name">First Name:</label>
+            <label for="email">Email</label>
+            <input
+              type="email"
+              id="email"
+              name="email"
+              required
+              placeholder="E.g. john@paisley.com"
+            />
+            <span class="error" id="email-error"></span>
+          </div>
+
+          <div>
+            <label for="password">Password</label>
+            <input type="password" id="password" name="password" required />
+            <span class="error" id="password-error"></span>
+          </div>
+
+          <div>
+            <label for="repeat-password">Repeat Password</label>
+            <input
+              type="password"
+              id="repeat-password"
+              name="repeat-password"
+              required
+            />
+            <span class="error" id="repeat-password-error"></span>
+          </div>
+
+          <div>
+            <label for="address">Address</label>
             <input
               type="text"
-              id="first_name"
-              name="first_name"
+              id="address"
+              name="address"
               required
-              minlength="2"
-              maxlength="50"
+              placeholder="E.g. Orange Road, 42"
             />
-            <span class="error" id="first_name-error"></span>
+            <span class="error" id="address-error"></span>
           </div>
+
           <div>
-            <label for="last_name">Last Name:</label>
+            <label for="phone_number">Phone Number</label>
             <input
-              type="text"
-              id="last_name"
-              name="last_name"
+              type="tel"
+              id="phone_number"
+              name="phone_number"
               required
-              minlength="2"
-              maxlength="50"
+              placeholder="E.g. 34215283"
             />
-            <span class="error" id="last_name-error"></span>
+            <span class="error" id="phone_number-error"></span>
           </div>
-        </div>
 
-        <div>
-          <label for="email">Email:</label>
-          <input type="email" id="email" name="email" required />
-          <span class="error" id="email-error"></span>
-        </div>
-
-        <div>
-          <label for="password">Password:</label>
-          <input type="password" id="password" name="password" required />
-          <span class="error" id="password-error"></span>
-        </div>
-
-        <div>
-          <label for="repeat-password">Repeat Password:</label>
-          <input
-            type="password"
-            id="repeat-password"
-            name="repeat-password"
-            required
-          />
-          <span class="error" id="repeat-password-error"></span>
-        </div>
-
-        <div>
-          <label for="address">Address:</label>
-          <input
-            type="text"
-            id="address"
-            name="address"
-            required
-            minlength="5"
-            maxlength="100"
-          />
-          <span class="error" id="address-error"></span>
-        </div>
-
-        <div>
-          <label for="phone_number">Phone Number:</label>
-          <input
-            type="tel"
-            id="phone_number"
-            name="phone_number"
-            required
-            pattern="[0-9]{10}"
-          />
-          <span class="error" id="phone_number-error"></span>
-        </div>
-
-        <div>
-          <label for="birth_date">Birthday:</label>
-          <input type="date" id="birth_date" name="birth_date" required />
-          <span class="error" id="birth_date-error"></span>
-        </div>
-        <span class="error" id="login-error"></span>
-        <div>
-          <button type="submit">Sign Up</button>
-        </div>
-      </form>
+          <div>
+            <label for="birth_date">Birthday</label>
+            <input type="date" id="birth_date" name="birth_date" required />
+            <span class="error" id="birth_date-error"></span>
+          </div>
+          <p class="reminder">
+            Already have an account?
+            <a href="login.html">Log in!</a>
+          </p>
+          <span class="error" id="login-error"></span>
+          <div>
+            <button type="submit">Sign Up</button>
+          </div>
+        </form>
+      </section>
     </main>
     <footer>
       <a href="index.html"><img src="img/logo.png" alt="ebook logo" /></a>
