--- a/dashboard.html
+++ b/dashboard.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title></title>
+    <title>Admin Dashboard</title>
     <script src="js/common.js" defer></script>
-    <script type="module" src="js/modules/book.mjs"></script>
-    <link rel="stylesheet" href="css/book.css" />
+    <script type="module" src="js/modules/dashboard.mjs"></script>
     <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/dashboard.css" />
   </head>
   <body>
     <header>
@@ -43,20 +43,35 @@
       </div>
     </header>
     <main>
-      <section id="book">
+      <h1>Admin Dashboard</h1>
+      <section>
+        <h2>Find book</h2>
+        <p>Look up details and loan history about any book</p>
+        <form id="book_details">
+          <div>
+            <label for="book_id">Book Id</label>
+            <input type="number" id="book_id" required />
+          </div>
+          <button type="submit" class="search_book">Search</button>
+        </form>
+      </section>
+      <section class="book_details_container">
         <div class="cover">
           <img src="" alt="" />
         </div>
         <div id="content">
-          <h1></h1>
+          <h3></h3>
           <div class="details">
             <p class="author"></p>
             <p class="publisher"></p>
             <p class="year"></p>
           </div>
-          <button id="loan_book">Loan book</button>
+          <button id="show_loan_history" class="hidden">
+            Show loan history
+          </button>
+          <span class="error"></span>
         </div>
-        <dialog class="loan_error">
+        <dialog class="loan_history">
           <button class="close-button" aria-label="Close dialog">
             <svg
               width="24"
@@ -72,45 +87,13 @@
               <line x1="6" y1="6" x2="18" y2="18"></line>
             </svg>
           </button>
-          <!-- Success Icon -->
-          <svg
-            class="success-icon"
-            width="64"
-            height="64"
-            viewBox="0 0 24 24"
-            fill="none"
-            stroke="currentColor"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-          >
-            <path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"></path>
-            <polyline points="22 4 12 14.01 9 11.01"></polyline>
-          </svg>
-          <!-- Error Icon -->
-          <svg
-            class="error-icon"
-            width="64"
-            height="64"
-            viewBox="0 0 24 24"
-            fill="none"
-            stroke="currentColor"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-          >
-            <circle cx="12" cy="12" r="10"></circle>
-            <line x1="15" y1="9" x2="9" y2="15"></line>
-            <line x1="9" y1="9" x2="15" y2="15"></line>
-          </svg>
           <div class="dialog-content">
-            <p class="loan-status"></p>
-            <p class="email-link"></p>
+            <span class="error"></span>
+            <ul class="book_loans"></ul>
           </div>
         </dialog>
       </section>
     </main>
-
     <footer>
       <a href="index.html"><img src="img/logo.png" alt="ebook logo" /></a>
 
@@ -128,4 +111,10 @@
       </div>
     </footer>
   </body>
+  <template id="book_loan_template">
+    <li class="loan_entry">
+      <h4>user id</h4>
+      <p>loan date</p>
+    </li>
+  </template>
 </html>
