--- a/dashboard.html
+++ b/dashboard.html
@@ -72,6 +72,7 @@
           <span class="error"></span>
         </div>
         <dialog class="loan_history">
+          <h3>Loan history</h3>
           <button class="close-button" aria-label="Close dialog">
             <svg
               width="24"
