updated js names

--- a/books.html
+++ b/books.html
@@ -6,8 +6,8 @@
     <title>Books</title>
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/cards.css" />
-    
-    <script type="module" src="js/modules/maincards.js"></script>
+
+    <script type="module" src="js/maincards.js"></script>
     <script src="js/common.js" defer></script>
   </head>
   <body>
@@ -76,17 +76,17 @@
   </body>
   <template id="book-card-template">
     <div class="card">
-        <a href="">
-      <div class="card-header"></div>
-      <div class="card-content">
-        <h3></h3>
-        <p class="author"></p>
-        <p class="published-year"></p>
-      </div>
-      <div class="card-footer">
-        <p>More info</p>
-    </div>
-    </a>
+      <a href="">
+        <div class="card-header"></div>
+        <div class="card-content">
+          <h3></h3>
+          <p class="author"></p>
+          <p class="published-year"></p>
+        </div>
+        <div class="card-footer">
+          <p>More info</p>
+        </div>
+      </a>
     </div>
   </template>
   <template id="author-card-template">
