--- a/results.html
+++ b/results.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script type="module" src="js/modules/results.mjs"></script>
+    <script type="module" src="js/results.js"></script>
     <script src="js/common.js" defer></script>
     <link rel="stylesheet" href="css/results.css" />
     <link rel="stylesheet" href="css/main.css" />
