--- a/signup.html
+++ b/signup.html
@@ -6,7 +6,7 @@
     <title>Sign-up</title>
     <link rel="stylesheet" href="css/login-signup.css" />
     <link rel="stylesheet" href="css/main.css" />
-    <script type="module" src="js/modules/signup_auth.mjs"></script>
+    <script type="module" src="js/signup_auth.js"></script>
     <script src="js/common.js" defer></script>
   </head>
   <body>
