--- a/book.html
+++ b/book.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title></title>
     <script src="js/common.js" defer></script>
-    <script type="module" src="js/modules/book.mjs"></script>
+    <script type="module" src="js/book.js"></script>
     <link rel="stylesheet" href="css/book.css" />
     <link rel="stylesheet" href="css/main.css" />
   </head>
