--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
     <title>Login</title>
     <link rel="stylesheet" href="css/login-signup.css" />
     <link rel="stylesheet" href="css/main.css" />
-    <script type="module" src="js/modules/login_auth.mjs"></script>
+    <script type="module" src="js/login_auth.js"></script>
     <script src="js/common.js" defer></script>
   </head>
   <body>
