--- a/author.html
+++ b/author.html
@@ -6,41 +6,41 @@
     <title>Author's Books</title>
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/cards.css" />
-    
   </head>
   <body>
     <header>
-        <a href="index.html"><img src="img/logo.png" alt="ebook logo" /></a>
-        <form id="search_form">
-          <label for="search_field">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 -960 960 960"
-              height="24px"
-              width="24px"
-            >
-              <path
-                d="M784-120 532-372q-30 24-69 38t-83 14q-109 0-184.5-75.5T120-580q0-109 75.5-184.5T380-840q109 0 184.5 75.5T640-580q0 44-14 83t-38 69l252 252-56 56ZM380-400q75 0 127.5-52.5T560-580q0-75-52.5-127.5T380-760q-75 0-127.5 52.5T200-580q0 75 52.5 127.5T380-400Z"
-              />
-            </svg>
-          </label>
-          <input
-            type="text"
-            id="search_field"
-            aria-label="search field"
-            placeholder="Search..."
-            required
-          />
-        </form>
-        <div class="header-buttons">
-          <a href="login.html" id="login_btn">Log in</a>
-          <a href="signup.html" id="signup_btn">Sign up</a>
-          <a href="index.html" id="logout_btn" class="hidden">Log out</a>
-          <a href="profile.html" id="profile_btn" class="hidden"
-            ><img src="icons/profile.svg" alt="account icon"
-          /></a>
-        </div>
-      </header>
+      <a href="index.html"><img src="img/logo.png" alt="ebook logo" /></a>
+      <form id="search_form">
+        <label for="search_field">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 -960 960 960"
+            height="24px"
+            width="24px"
+          >
+            <path
+              d="M784-120 532-372q-30 24-69 38t-83 14q-109 0-184.5-75.5T120-580q0-109 75.5-184.5T380-840q109 0 184.5 75.5T640-580q0 44-14 83t-38 69l252 252-56 56ZM380-400q75 0 127.5-52.5T560-580q0-75-52.5-127.5T380-760q-75 0-127.5 52.5T200-580q0 75 52.5 127.5T380-400Z"
+            />
+          </svg>
+        </label>
+        <input
+          type="text"
+          id="search_field"
+          aria-label="search field"
+          placeholder="Search..."
+          required
+        />
+      </form>
+      <div class="header-buttons">
+        <a href="dashboard.html" id="dashboard_btn" class="hidden">Dashboard</a>
+        <a href="login.html" id="login_btn">Log in</a>
+        <a href="signup.html" id="signup_btn">Sign up</a>
+        <a href="index.html" id="logout_btn" class="hidden">Log out</a>
+        <a href="profile.html" id="profile_btn" class="hidden"
+          ><img src="icons/profile.svg" alt="account icon"
+        /></a>
+      </div>
+    </header>
     <main>
       <section id="author-section">
         <h1 id="author-name">Author Name</h1>
