--- a/signup.html
+++ b/signup.html
@@ -34,6 +34,7 @@
         />
       </form>
       <div class="header-buttons">
+        <a href="dashboard.html" id="dashboard_btn" class="hidden">Dashboard</a>
         <a href="login.html" id="login_btn">Log in</a>
         <a href="signup.html" id="signup_btn">Sign up</a>
         <a href="index.html" id="logout_btn" class="hidden">Log out</a>
