--- a/dashboard.html
+++ b/dashboard.html
@@ -95,6 +95,56 @@
           </div>
         </dialog>
       </section>
+      <section id="add_content">
+        <h2>Add content</h2>
+        <div>
+          <a href="#add_book">Add book</a>
+          <a href="#add_author">Add author</a>
+          <a href="#add_publisher">Add publisher</a>
+        </div>
+        <form id="add_book">
+          <h3>Add book</h3>
+          <div>
+            <label for="add_title">Title</label
+            ><input type="text" id="add_title" />
+          </div>
+          <div>
+            <label for="add_author">Author ID</label
+            ><input type="text" id="add_author" />
+          </div>
+          <div>
+            <label for="add_publisher">Publisher ID</label
+            ><input type="text" id="add_publisher" />
+          </div>
+          <div>
+            <label for="add_year">Publishing Year</label
+            ><input type="text" id="add_year" />
+          </div>
+          <button type="submit">Add book</button>
+        </form>
+        <form id="add_author">
+          <h3>Add author</h3>
+          <div>
+            <label for="add_first_name">First Name</label
+            ><input type="text" id="add_first_name" />
+          </div>
+          <div>
+            <label for="add_last_name">Last Name</label
+            ><input type="text" id="add_last_name" />
+          </div>
+
+          <button type="submit">Add author</button>
+        </form>
+        <form id="add_publisher">
+          <h3>Add publisher</h3>
+          <div>
+            <label for="add_publisher_name">Name</label
+            ><input type="text" id="add_publisher_name" />
+          </div>
+
+          <button type="submit">Add publisher</button>
+        </form>
+      </section>
     </main>
     <footer>
       <a href="index.html"><img src="img/logo.png" alt="ebook logo" /></a>
