--- a/author.html
+++ b/author.html
@@ -90,7 +90,21 @@
       </section>
     </main>
     <footer>
+      <a href="index.html"
+        ><img src="img/logo.png" alt="ebook logo" class="logo"
+      /></a>
       <p>&#169; eBooks</p>
+      <div class="some_icons">
+        <a href="https://www.facebook.com" target="_blank">
+          <img src="img/facebook.png" alt="facebook logo" />
+        </a>
+        <a href="https://www.instagram.com" target="_blank">
+          <img src="img/instagram.png" alt="instagram logo" />
+        </a>
+        <a href="https://www.youtube.com" target="_blank">
+          <img src="img/youtube.png" alt="youtube logo" />
+        </a>
+      </div>
     </footer>
     <template id="book-card-template">
       <div class="card">
