--- a/book.html
+++ b/book.html
@@ -139,8 +139,9 @@
     </main>
 
     <footer>
-      <a href="index.html"><img src="img/logo.png" alt="ebook logo" /></a>
-
+      <a href="index.html"
+        ><img src="img/logo.png" alt="ebook logo" class="logo"
+      /></a>
       <p>&#169; eBooks</p>
       <div class="some_icons">
         <a href="https://www.facebook.com" target="_blank">
