--- a/books.html
+++ b/books.html
@@ -100,8 +100,9 @@
       </section>
     </main>
     <footer>
-      <a href="index.html"><img src="img/logo.png" alt="ebook logo" /></a>
-
+      <a href="index.html"
+        ><img src="img/logo.png" alt="ebook logo" class="logo"
+      /></a>
       <p>&#169; eBooks</p>
       <div class="some_icons">
         <a href="https://www.facebook.com" target="_blank">
