active classes for menu items

--- a/dashboard.html
+++ b/dashboard.html
@@ -61,7 +61,9 @@
           />
         </form>
         <a href="index.html" id="home_btn">Home</a>
-        <a href="dashboard.html" id="dashboard_btn" class="hidden">Dashboard</a>
+        <a href="dashboard.html" id="dashboard_btn" class="hidden active_page"
+          >Dashboard</a
+        >
         <a href="login.html" id="login_btn">Log in</a>
         <a href="signup.html" id="signup_btn">Sign up</a>
         <a href="index.html" id="logout_btn" class="hidden">Log out</a>
