--- a/profile.html
+++ b/profile.html
@@ -68,7 +68,7 @@
         <a
           href="profile.html"
           id="profile_btn"
-          class="hidden"
+          class="hidden active_page"
           aria-label="Profile button"
           ><svg
             xmlns="http://www.w3.org/2000/svg"
