--- a/signup.html
+++ b/signup.html
@@ -63,7 +63,7 @@
         <a href="index.html" id="home_btn">Home</a>
         <a href="dashboard.html" id="dashboard_btn" class="hidden">Dashboard</a>
         <a href="login.html" id="login_btn">Log in</a>
-        <a href="signup.html" id="signup_btn">Sign up</a>
+        <a href="signup.html" id="signup_btn" class="active_page">Sign up</a>
         <a href="index.html" id="logout_btn" class="hidden">Log out</a>
         <a
           href="profile.html"
