--- a/results.html
+++ b/results.html
@@ -85,6 +85,19 @@
       </div>
     </header>
     <main>
+      <div class="back-navigation">
+        <button class="back-button">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            height="24"
+            viewBox="0 -960 960 960"
+            width="24"
+          >
+            <path d="M400-80 0-480l400-400 56 57-343 343 343 343-56 57Z" />
+          </svg>
+          Back
+        </button>
+      </div>
       <h1></h1>
       <section id="results"></section>
     </main>
