--- a/book.html
+++ b/book.html
@@ -189,5 +189,18 @@
         </a>
       </div>
     </footer>
+    <template id="book_card_template">
+      <article class="recommendation-card">
+        <a href="#">
+          <div class="card-cover">
+            <img src="" alt="" loading="lazy" />
+          </div>
+          <div class="card-content">
+            <h3></h3>
+            <p class="author"></p>
+          </div>
+        </a>
+      </article>
+    </template>
   </body>
 </html>
