--- a/author.html
+++ b/author.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Author's Books</title>
     <link rel="stylesheet" href="css/main.css" />
-    <link rel="stylesheet" href="css/cards.css" />
+    <link rel="stylesheet" href="css/authors.css">
     <script src="js/common.js" defer></script>
     <script src="js/authorBooks.js" type="module"></script>
   </head>
@@ -98,9 +98,10 @@
           Back
         </button>
       </div>
-      <section id="author-section">
+      
         <h1 id="author-name">Author Name</h1>
         <h2>Books by this author:</h2>
+        <section id="author-section">
         <div id="books-container" class="cards-container"></div>
       </section>
     </main>
