--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           <p>Discover amazing content and more than 1500 books online</p>
           <div class="hero-buttons">
             <a href="signup.html" class="btn primary">Get Started</a>
-            <a href="books.html" class="btn secondary">Discover our books</a>
+            <a href="discover.html" class="btn secondary">Discover our books</a>
           </div>
         </div>
       </section>
