px -> rem + fixed the cards

--- a/discover.html
+++ b/discover.html
@@ -144,7 +144,7 @@
     </footer>
   </body>
   <template id="book-card-template">
-    <div class="card">
+    <article class="card">
       <a href="">
         <div class="card-header"></div>
         <div class="card-content">
@@ -156,15 +156,15 @@
           <p>More info</p>
         </div>
       </a>
-    </div>
+    </article>
   </template>
   <template id="author-card-template">
-    <div class="card">
+    <article class="card">
       <a href="">
         <div class="card-content">
           <h3 class="author-name"></h3>
         </div>
       </a>
-    </div>
+    </article>
   </template>
 </html>
