loan book ux update

--- a/book.html
+++ b/book.html
@@ -110,6 +110,7 @@
             <p class="year"></p>
           </div>
           <button id="loan_book" class="btn">Loan book</button>
+          <p class="loan-info">Loans are limited to 30 days</p>
         </div>
         <dialog class="loan_error">
           <button class="close-button" aria-label="Close dialog">
