--- a/login.html
+++ b/login.html
@@ -124,18 +124,18 @@
     </main>
     <footer>
       <a href="index.html"
-        ><img src="img/logo.webp" alt="ebook logo" class="logo"
+        ><img src="img/logo.webp" alt="ebook logo" class="logo" loading="lazy"
       /></a>
       <p>&#169; eBooks</p>
       <div class="some_icons">
         <a href="https://www.facebook.com" target="_blank">
-          <img src="img/facebook.png" alt="facebook logo" />
+          <img src="img/facebook.png" alt="facebook logo" loading="lazy" />
         </a>
         <a href="https://www.instagram.com" target="_blank">
-          <img src="img/instagram.png" alt="instagram logo" />
+          <img src="img/instagram.png" alt="instagram logo" loading="lazy" />
         </a>
         <a href="https://www.youtube.com" target="_blank">
-          <img src="img/youtube.png" alt="youtube logo" />
+          <img src="img/youtube.png" alt="youtube logo" loading="lazy" />
         </a>
       </div>
     </footer>
