--- a/book.html
+++ b/book.html
@@ -6,11 +6,8 @@
     <title></title>
     <script src="js/common.js" defer></script>
     <script type="module" src="js/book.js"></script>
-    <link rel="preload" href="/css/book.css" as="style">
-    <link rel="preload" href="/css/main.css" as="style">
-
-    <link rel="stylesheet" href="/css/book.css">
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="css/book.css">
+    <link rel="stylesheet" href="css/main.css">
   </head>
   <body id="book_page">
     <header>
@@ -203,9 +200,6 @@
     <template id="book_card_template">
       <article class="recommendation-card">
         <a href="#">
-          <div class="card-cover">
-            <img src="" alt="" loading="lazy" />
-          </div>
           <div class="card-content">
             <h3></h3>
             <p class="author"></p>
